syntax = "proto3";
package com.glureau.wolfram30.chat;


message ChatMsg {
    string id = 1;
    int64 timeStamp = 2;
    UserMsg user = 3;
    string message = 4;
    FileMsg file = 5;
    MapMsg map = 6;

    message UserMsg {
        string id = 1;
        string name = 2;
        string photo_profile = 3;
    }

    message FileMsg {
        string type = 1;
        string url_file = 2;
        string name_file = 3;
        string size_file = 4;
    }

    message MapMsg {
        string latitude = 1;
        string longitude = 2;
    }

}
